[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/tune_white_48dp.svg" type="Texture" id=1]
[ext_resource path="res://scripts/cell.gd" type="Script" id=5]

[node name="cell" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_button" type="Button" parent="."]
margin_right = 64.0
margin_bottom = 64.0
focus_mode = 0
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flash" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="AudioStreamPlayer" parent="."]

[node name="settings_menu" type="WindowDialog" parent="."]
margin_right = 258.0
margin_bottom = 237.0
window_title = "Cell settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sample_scroll" type="ScrollContainer" parent="settings_menu"]
margin_left = 4.0
margin_top = 9.0
margin_right = 253.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sample_status" type="Label" parent="settings_menu/sample_scroll"]
margin_right = 129.0
margin_bottom = 14.0
text = "No assigned sample"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_button" type="Button" parent="settings_menu"]
margin_left = 4.0
margin_top = 64.0
margin_right = 253.0
margin_bottom = 86.0
focus_mode = 0
text = "Load sample"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clear_button" type="Button" parent="settings_menu"]
margin_left = 4.0
margin_top = 97.5
margin_right = 253.0
margin_bottom = 119.5
focus_mode = 0
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="settings_menu"]
margin_left = 4.0
margin_top = 131.5
margin_right = 253.0
margin_bottom = 153.5
focus_mode = 0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pitch_box" type="SpinBox" parent="settings_menu"]
margin_left = 179.0
margin_top = 167.0
margin_right = 253.0
margin_bottom = 191.0
min_value = -12.0
max_value = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volume_box" type="SpinBox" parent="settings_menu"]
margin_left = 179.0
margin_top = 201.0
margin_right = 253.0
margin_bottom = 225.0
min_value = -6.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pitch_label" type="Label" parent="settings_menu"]
margin_left = 4.0
margin_top = 167.0
margin_right = 129.0
margin_bottom = 191.0
text = "Pitch shift (st):"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volume_label" type="Label" parent="settings_menu"]
margin_left = 4.0
margin_top = 201.0
margin_right = 129.0
margin_bottom = 225.0
text = "Volume (dB):"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="file_dialog" type="FileDialog" parent="settings_menu"]
visible = true
margin_left = 258.0
margin_right = 573.0
margin_bottom = 356.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.wav" )
current_dir = "/Daniil/art/arhexint"
current_path = "/Daniil/art/arhexint/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flash_timer" type="Timer" parent="."]
one_shot = true

[node name="audio_timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="settings_button" to="." method="_show_settings"]
[connection signal="pressed" from="settings_menu/load_button" to="." method="_load_pressed"]
[connection signal="pressed" from="settings_menu/clear_button" to="." method="_clear_pressed"]
[connection signal="pressed" from="settings_menu/play_button" to="." method="_play_sample"]
[connection signal="value_changed" from="settings_menu/pitch_box" to="." method="_pitch_changed"]
[connection signal="value_changed" from="settings_menu/volume_box" to="." method="_volume_changed"]
[connection signal="file_selected" from="settings_menu/file_dialog" to="." method="_file_selected"]
[connection signal="timeout" from="flash_timer" to="." method="_flash_timeout"]
[connection signal="timeout" from="audio_timer" to="." method="_audio_timeout"]
